update the models

--- a/backend/src/train.ipynb
+++ b/backend/src/train.ipynb
@@ -15,16 +15,32 @@
    "source": [
     "from tokenizer import AmharicSegmenter\n",
     "from ngram import NgramModel\n",
-    "from utils import read_file, read_lines"
+    "from utils import read_file, read_lines\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current directory:  c:\\Users\\Sami\\Downloads\\Amharic_spell_checker\\backend\\src\n",
+      "Looking for corpus at: c:\\Users\\Sami\\Downloads\\Amharic_spell_checker\\backend\\data\\amharic_corpus.txt\n"
+     ]
+    }
+   ],
    "source": [
-    "corpus_path = 'data/amharic_corpus.txt'"
+    "current_dir = Path().absolute()\n",
+    "print(\"current directory: \", current_dir)\n",
+    "corpus_path = os.path.join(current_dir.parent, \"data\", \"amharic_corpus.txt\")\n",
+    "print(f\"Looking for corpus at: {corpus_path}\")\n",
+    "# corpus_path = 'data/amharic_corpus.txt'"
    ]
   },
   {
@@ -65,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "6294816"
+       "6308145"
       ]
      },
      "execution_count": 6,
@@ -79,23 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We have 6 million two hundred ninety four thousand eight hundred and sixteen tokens\n",
     "# Let us create NGram\n",
     "\n",
-    "bigram_model = NgramModel(corpus, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trigram_model = NgramModel(corpus, 3)"
+    "bigram_model = NgramModel(corpus, 2)\n",
+    "bigram_model.train()"
    ]
   },
   {
@@ -104,16 +112,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bigram_model.save(\"models/bigram_\")"
+    "trigram_model = NgramModel(corpus, 3)\n",
+    "trigram_model.train()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the path before creation is  c:\\Users\\Sami\\Downloads\\Amharic_spell_checker\\backend\\models\n",
+      "the path to be opened is   c:\\Users\\Sami\\Downloads\\Amharic_spell_checker\\backend\\models\n"
+     ]
+    }
+   ],
    "source": [
-    "trigram_model.save(\"models/trigram_\")"
+    "saving_dir = Path().absolute()\n",
+    "bigram_model.save(os.path.join(saving_dir.parent, \"models/bigram_\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the path before creation is  c:\\Users\\Sami\\Downloads\\Amharic_spell_checker\\backend\\models\n",
+      "the path to be opened is   c:\\Users\\Sami\\Downloads\\Amharic_spell_checker\\backend\\models\n"
+     ]
+    }
+   ],
+   "source": [
+    "saving_dir = Path().absolute()\n",
+    "trigram_model.save(os.path.join(saving_dir.parent, \"models/trigram_\"))\n"
    ]
   },
   {
