updat the model

--- a/backend/src/train.ipynb
+++ b/backend/src/train.ipynb
@@ -13,9 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tokenizer import AmharicSegmenter\n",
-    "from ngram import NgramModel\n",
-    "from utils import read_file, read_lines\n",
+    "from src.tokenizer import AmharicSegmenter\n",
+    "from src.ngram import NgramModel\n",
+    "from src.utils import read_file, read_lines\n",
     "import os\n",
     "from pathlib import Path\n",
     "\n"
